@@ -132,11 +132,12 @@ extern struct gpasm_state {
   struct range_pair *badrom;
 
   enum outfile
-    codfile,                        /* Symbol output file control */
-    depfile,                        /* Dependency output file control */
-    hexfile,                        /* Hex output file control */
-    lstfile,                        /* List output file control */
-    objfile;                        /* Relocatable object file control */
+    codfile,                        /* Symbol output file control. */
+    depfile,                        /* Dependency output file control. */
+    errfile,                        /* Error output file control. */
+    hexfile,                        /* Hex output file control. */
+    lstfile,                        /* List output file control. */
+    objfile;                        /* Relocatable object file control. */
 
   struct {                          /* Totals for errors, warnings, messages */
     int errors;
@@ -169,12 +170,13 @@ extern struct gpasm_state {
   MemBlock *c_memory;               /* Configuration memory linked list */
   struct conf_mem_block_s *conf_sec_mem;  /* Configuration section memory linked list */
 
-  char *srcfilename,                /* Source (.asm) file name */
-    basefilename[BUFSIZ],           /* basename for generating hex,list,symbol filenames */
-    codfilename[BUFSIZ],            /* Symbol (.cod) file name */
-    depfilename[BUFSIZ],            /* Dependency (.d) file name */
-    lstfilename[BUFSIZ],            /* List (.lst) file name */
-    objfilename[BUFSIZ];            /* Object (.o) file name */
+  char *srcfilename,                /* Source (.asm) file name. */
+    basefilename[BUFSIZ],           /* Basename for generating hex,list,symbol filenames. */
+    codfilename[BUFSIZ],            /* Symbol (.cod) file name. */
+    depfilename[BUFSIZ],            /* Dependency (.d) file name. */
+    errfilename[BUFSIZ],            /* Error - messages - (.err) file name. */
+    lstfilename[BUFSIZ],            /* List (.lst) file name. */
+    objfilename[BUFSIZ];            /* Object (.o) file name. */
 
   struct {                          /* Symbol file state: */
     FILE *f;                        /*   Symbol file output */
@@ -186,6 +188,11 @@ extern struct gpasm_state {
     FILE *f;                        /*   Dep file output */
     gp_boolean enabled;             /*   true if dep file is enabled */
   } dep;
+
+  struct {                          /* Error file state: */
+    FILE *f;                        /*   Error file output. */
+    gp_boolean enabled;             /*   True if err file is enabled. */
+  } err;
 
   struct {                          /* List file state: */
     FILE *f;                        /*   List file output */
